@@ -110,7 +110,8 @@ All (GUI):
 wxMSW:
 
 - small appearance fixes for native look under Windows XP
-- huge (40*) speed up in wxMask::Create() (=> much faster toolbar creation)
+- huge (40*) speed up in wxMask::Create()
+- changing wxWindows styles also changes the underlying Windows window style
 - fixed flicker in wxTreeCtrl::SetItemXXX()
 - fixed redraw problems in dynamically resized wxStaticText
 - improvements to wxWindows applications behaviour when the system colours
